<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterEmployeeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_text"
            android:text="@string/register_employee"
            android:textSize="32sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="17dp"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_text_view"
            android:text="@string/email_text_view"
            android:layout_marginTop="88dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_text_view"
            android:text="@string/password_text_view"
            android:layout_marginTop="165dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password_text_view"
            android:text="@string/confirm_password_text"
            android:layout_marginTop="245dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_text_view"
            android:text="@string/name_text"
            android:layout_marginTop="329dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/admin_text_view"
            android:text="@string/is_admin_text"
            android:layout_marginTop="406dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
    />
    <AutoCompleteTextView
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_register"
            android:labelFor="@id/user_register"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/password_register"
            android:layout_alignParentTop="true"
            android:layout_marginTop="107dp"
            android:layout_centerHorizontal="true"/>

    <EditText
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:id="@+id/password_register"
            android:labelFor="@id/password_register"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginTop="185dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
    />

    <EditText
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password_register"
            android:labelFor="@id/confirm_password_register"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginTop="266dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>


    <EditText
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_register"
            android:labelFor="@id/name_register"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text"
            android:layout_marginTop="348dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
    />
    <CheckBox
            android:id="@+id/is_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="426dp"
            android:layout_centerHorizontal="true"
    />

    <Button
            android:layout_width="199dp"
            android:layout_height="61dp"
            android:id="@+id/register_button"
            android:text="@string/register_button_text"
            android:layout_marginTop="482dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"/>


</RelativeLayout>
</ScrollView>