<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_text"
            android:text="@string/login"
            android:textSize="32sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="46dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_text_view"
            android:text="@string/email_text_view"
            android:layout_marginTop="152dp" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_text_view"
            android:text="@string/password_text_view"
            android:layout_marginTop="257dp"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>

    <AutoCompleteTextView
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_login"
            android:labelFor="@id/user_login"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/password_login"
            android:layout_alignParentTop="true" android:layout_marginTop="169dp"
            android:layout_centerHorizontal="true"/>
    <EditText
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:id="@+id/password_login"
            android:labelFor="@id/password_login"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword" android:layout_marginTop="277dp"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="199dp"
            android:layout_height="61dp"
            android:id="@+id/login_button"
            android:text="@string/login_button_text"
            android:layout_marginTop="360dp"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>


</RelativeLayout>